k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glowcart
  labels:
    app.kubernetes.io/name: glowcart
    app.kubernetes.io/part-of: glowcart-platform
